--- a/content/pub.tex
+++ b/content/pub.tex
@@ -38,16 +38,16 @@
 %---------------------------------------------------------
 
 \cvpub
-    {Air Pollutions in Ports} % name of paper
+      { \href{https://nussarafirn.github.io/air-pollutions-in-ports}{Air Pollutions in Ports}} % name of paper
     {\textbf{Nussara Tieanklin}} % auth
-    { \href{https://nussarafirn.github.io/air-quality-in-ports}{nussarafirn.github.io/air-quality-in-ports}} % desc
+    { \href{https://nussarafirn.github.io/air-pollutions-in-ports}{nussarafirn.github.io/air-pollutions-in-ports}} % desc
     {July 2022} %date     
 %---------------------------------------------------------
 
 \cvpub
-    {\shortstack[l]{mtunzi: a programmable approach to software-defined network access control \\ and captive networking for low-resource setting}} % name of paper
+    {\shortstack[l]{ \href{https://nussarafirn.github.io/mtunzi}{mtunzi: a programmable approach to software-defined network access control} \\ and captive networking for low-resource setting}} % name of paper
     {Innocent Ndubuisi-Obi Jr, \textbf{Nussara Tieanklin}} % auth
-    { \href{https://nussarafirn.github.io/air-quality-in-ports}{nussarafirn.github.io/air-quality-in-ports}} % desc
+    { \href{https://nussarafirn.github.io/mtunzi}{nussarafirn.github.io/mtunzi}} % desc
     {December 2021} %date     
 
 %---------------------------------------------------------
@@ -55,7 +55,7 @@
   \cvpub
     {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{The Low Impact of COVID-19 on Rural Community Network Traffic}} %  title
     {\textbf{Nussara Tieanklin}, Matthew Johnson, Kurtis Heimerl (ACM COMPASS 2021)}
-    {} % desc
+    {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{dl.acm.org/doi/10.1145/3460112.3472311}} % desc
     {June 2021} % Date
 %---------------------------------------------------------
 
