--- a/content/pub.tex
+++ b/content/pub.tex
@@ -21,7 +21,7 @@
 
 \cvpub
     {Participant Observation Study on Community Network Mobilization} % name of paper
-    {\textbf{Nussara Tieanklin}, Joseph Breda, Kurtis Heimerl} % auth
+    {\textbf{Nussara Tieanklin}, Esther Jang, Kurtis Heimerl} % auth
     {Work In Progress} % desc
     {2022} %date
    
@@ -30,7 +30,7 @@
 
 \cvpub
     {Menopause Legacies: Designing to Record \& Share Menopause Experiences Across Generations} % name of paper
-    {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}} % auth
+    {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}, Sean Munson, James Fogarty} % auth
     {Work In Progress} % desc
     {2022} %date
    
