--- a/content/pub.tex
+++ b/content/pub.tex
@@ -14,8 +14,8 @@
 \cvpub
     {The Effect of Air Pollution on the Motorcycle-Taxi Grab Workers in Southeast Asia} % name of paper
     {\textbf{Nussara Tieanklin}, Joseph Breda, Kurtis Heimerl} % auth
-    {Work In Progress} % desc
-    {2022} %date
+    {Under review} % desc
+    {2023} %date
 
 %---------------------------------------------------------  
 
@@ -23,7 +23,7 @@
     {Participant Observation Study on Community Network Mobilization} % name of paper
     {\textbf{Nussara Tieanklin}, Esther Jang, Kurtis Heimerl} % auth
     {Work In Progress} % desc
-    {2022} %date
+    {2023} %date
    
    
 %---------------------------------------------------------
@@ -32,7 +32,7 @@
     {Menopause Legacies: Designing to Record \& Share Menopause Experiences Across Generations} % name of paper
     {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}, Sean Munson, James Fogarty} % auth
     {Work In Progress} % desc
-    {2022} %date
+    {2023} %date
    
 
 %---------------------------------------------------------
