Updates from Overleaf

--- a/content/pub.tex
+++ b/content/pub.tex
@@ -13,7 +13,7 @@
 %---------------------------------------------------------  
 \cvpub
     {The Effect of Air Pollution on the Motorcycle-Taxi Grab Workers in Southeast Asia} % name of paper
-    {\textbf{Nussara Tieanklin}, Joseph Breda, Kurtis Heimerl} % auth
+    {\textbf{Nussara Tieanklin*}, Joseph Breda*, Kurtis Heimerl} % auth
     {Under review} % desc
     {2023} %date
 
