Updates from Overleaf

--- a/content/experience.tex
+++ b/content/experience.tex
@@ -19,7 +19,10 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {
-          Applies mixed-methods research to analyze how the air pollution impacts motorcycle-taxi Grab workers' strategies and income in Southeast Asia. (in partnership with Grab Holding Inc.)
+          Applies mixed-methods research to analyze how the air pollution impacts motorcycle-taxi Grab workers' strategies and income in Southeast Asia (in partnership with Grab Holding Inc.). To appear in CSCW 2024.
+        }
+        \item {
+          Enhance sensor technology, engage with novel at-risk demographics, and develop comprehensive policy documentation to highlight the impact of urban air pollution in on vulnerable populations in Thailand. Explore potential optimizations, such as adjusting work schedules, while acknowledging existing constraints.
         }
         \item {
           Collaborate in community outreach, equipment deployment, and troubleshooting on the open-sourced Community Cellular (LTE) Network project to bring affordable high-speed connectivity to lower-income neighborhoods in South Seattle and Tacoma area.
@@ -35,6 +38,7 @@
         % }
       \end{cvitems}
     }
+
 %---------------------------------------------------------
   \cventry
     {School of Engineering and Technology (UWT) } % Organization
@@ -46,6 +50,21 @@
         \item {
           Interpret decision making behind Deep Learning models and decompress in order to have them operate in IoT devices efficiently, such as mobiles and tablets, to detect and block Domain Generation Algorithm (DGA) malwares with Infobox company under supervision of Prof. Juhua Hu.
         }
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Aeronautical Radio of Thailand at Bangkok Thailand} % Organization
+    {Data Scientist} % Job title
+    {October 2023 - Present} % Date
+    {} 
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {
+          Contribute to strategic planning and implementation in the Air Traffic Flow Management (ATFM) team to optimize air traffic flow, ensure a balance between demand and capacity, and aid in reducing pollution emissions and optimizing costs amidst growing traffic.
+        } 
+        \item {Provide strategic advice and planning for the establishment of a Data Innovation Center, guiding the transformation of the company into a data-driven organization.}
       \end{cvitems}
     }
 
