--- a/content/pub.tex
+++ b/content/pub.tex
@@ -14,16 +14,36 @@
 \cvpub
     {The Effect of Air Pollution on the Motorcycle-Taxi Grab Workers in Southeast Asia} % name of paper
     {\textbf{Nussara Tieanklin*}, Joseph Breda*, Kurtis Heimerl} % auth
-    {Under review} % desc
+    {CSCW 2024} % desc
     {2023} %date
+
 
 %---------------------------------------------------------  
 
 \cvpub
-    {Participant Observation Study on Community Network Mobilization} % name of paper
-    {\textbf{Nussara Tieanklin}, Esther Jang, Kurtis Heimerl} % auth
-    {Work In Progress} % desc
+    {Notably Inaccessible – Data Driven Understanding of Data Science Notebook (In)Accessibility} % name of paper
+    {Venkatesh Potluri*, Sudheesh Singanamalla*, \textbf{Nussara Tieanklin}, Jennifer Mankoff} % auth
+    {\href{https://dl.acm.org/doi/10.1145/3597638.3608417}{ASSETS 2023}} % desc
     {2023} %date
+
+%---------------------------------------------------------
+
+  \cvpub
+    {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{The Low Impact of COVID-19 on Rural Community Network Traffic}} %  title
+    {\textbf{Nussara Tieanklin}, Matthew Johnson, Kurtis Heimerl}
+    {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{ACM COMPASS 2021}}
+    % {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{dl.acm.org/doi/10.1145/3460112.3472311}} % desc
+    % {June 2021} % Date
+    {2021}
+
+
+%---------------------------------------------------------  
+
+\cvpub
+    {Seattle Community Network: A Model for Grassroots Infrastructuring of a Technical Learning Commons} % name of paper
+    {Esther Jang, \textbf{Nussara Tieanklin}, Kurtis Heimerl} % auth
+    {Under Review} % desc
+    {2024} %date
    
    
 %---------------------------------------------------------
@@ -31,7 +51,7 @@
 \cvpub
     {Menopause Legacies: Designing to Record \& Share Menopause Experiences Across Generations} % name of paper
     {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}, Sean Munson, James Fogarty} % auth
-    {Work In Progress} % desc
+    {Under Review} % desc
     {2023} %date
    
 
@@ -41,29 +61,25 @@
       { \href{https://nussarafirn.github.io/air-pollutions-in-ports}{Air Pollutions in Ports}} % name of paper
     {\textbf{Nussara Tieanklin}} % auth
     { \href{https://nussarafirn.github.io/air-pollutions-in-ports}{nussarafirn.github.io/air-pollutions-in-ports}} % desc
-    {July 2022} %date     
+    {2022} %date
+    % {July 2022} %date     
 %---------------------------------------------------------
 
 \cvpub
     {\shortstack[l]{ \href{https://nussarafirn.github.io/mtunzi}{mtunzi: a programmable approach to software-defined network access control} \\ and captive networking for low-resource setting}} % name of paper
     {Innocent Ndubuisi-Obi Jr, \textbf{Nussara Tieanklin}} % auth
     { \href{https://nussarafirn.github.io/mtunzi}{nussarafirn.github.io/mtunzi}} % desc
-    {December 2021} %date     
+    {2021} %date     
+    % {December 2021} %date     
 
-%---------------------------------------------------------
-
-  \cvpub
-    {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{The Low Impact of COVID-19 on Rural Community Network Traffic}} %  title
-    {\textbf{Nussara Tieanklin}, Matthew Johnson, Kurtis Heimerl (ACM COMPASS 2021)}
-    {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{dl.acm.org/doi/10.1145/3460112.3472311}} % desc
-    {June 2021} % Date
 %---------------------------------------------------------
 
     \cvpub
         {\href{https://www.tacoma.uw.edu/sites/default/files/2021-08/tieanklin_nussara_senior_thesis-2021.pdf}{Weight-Based Deep Model Compression of DGA Detectors for Small Devices}} %  title
         {\textbf{Nussara Tieanklin} (Computer Science \& Systems Honors)} 
         {} % Organization
-        {June 2021} % Date
+        {2021} % Date
+        % {June 2021} % Date
 %---------------------------------------------------------
 %---------------------------------------------------------
 \end{cventries}
