--- a/content/pub.tex
+++ b/content/pub.tex
@@ -12,22 +12,27 @@
 %---------------------------------------------------------
 %---------------------------------------------------------  
 \cvpub
-    {The Effect of Air Pollution on the Motorcycle-Taxi Grab Workers in Southeast Asia} % name of paper
+    {\shortstack[l]{\href{https://dl.acm.org/doi/abs/10.1145/3653706}{"I will just have to keep driving": A Mixed-methods Investigation of} \\
+    Lack of Agency within the Thai Motorcycle Rideshare Driver Community}} % name of paper
     {\textbf{Nussara Tieanklin*}, Joseph Breda*, Kurtis Heimerl} % auth
     {CSCW 2024} % desc
-    {2023} %date
-
-
+    {2024} %date
 %---------------------------------------------------------  
 
 \cvpub
-    {Notably Inaccessible – Data Driven Understanding of Data Science Notebook (In)Accessibility} % name of paper
+    {\href{https://doi.org/10.1145/3597638.3608417}{Notably Inaccessible – Data Driven Understanding of Data Science Notebook (In)Accessibility}} % name of paper
     {Venkatesh Potluri*, Sudheesh Singanamalla*, \textbf{Nussara Tieanklin}, Jennifer Mankoff} % auth
     {\href{https://dl.acm.org/doi/10.1145/3597638.3608417}{ASSETS 2023}} % desc
     {2023} %date
-
 %---------------------------------------------------------
 
+\cvpub
+    {Menopause Legacies: Designing to Record \& Share Menopause Experiences Across Generations} % name of paper
+    {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}, Sean Munson, James Fogarty} % auth
+    {CSCW 2024} % desc
+    {2024} %date
+%---------------------------------------------------------  
+  
   \cvpub
     {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{The Low Impact of COVID-19 on Rural Community Network Traffic}} %  title
     {\textbf{Nussara Tieanklin}, Matthew Johnson, Kurtis Heimerl}
@@ -35,26 +40,12 @@
     % {\href{https://dl.acm.org/doi/10.1145/3460112.3472311}{dl.acm.org/doi/10.1145/3460112.3472311}} % desc
     % {June 2021} % Date
     {2021}
-
-
-%---------------------------------------------------------  
-
-\cvpub
-    {Seattle Community Network: A Model for Grassroots Infrastructuring of a Technical Learning Commons} % name of paper
-    {Esther Jang, \textbf{Nussara Tieanklin}, Kurtis Heimerl} % auth
-    {Under Review} % desc
-    {2024} %date
-   
-   
 %---------------------------------------------------------
-
-\cvpub
-    {Menopause Legacies: Designing to Record \& Share Menopause Experiences Across Generations} % name of paper
-    {Shaan Chopra, Katherine Juarez, Lisa Orii, \textbf{Nussara Tieanklin}, Sean Munson, James Fogarty} % auth
-    {Under Review} % desc
-    {2023} %date
-   
-
+% \cvpub
+%     {Seattle Community Network: A Model for Grassroots Infrastructuring of a Technical Learning Commons} % name of paper
+%     {Esther Jang, \textbf{Nussara Tieanklin}, Kurtis Heimerl} % auth
+%     {Under Review} % desc
+%     {2024} %date
 %---------------------------------------------------------
 
 \cvpub
@@ -71,10 +62,9 @@
     { \href{https://nussarafirn.github.io/mtunzi}{nussarafirn.github.io/mtunzi}} % desc
     {2021} %date     
     % {December 2021} %date     
-
 %---------------------------------------------------------
 
-    \cvpub
+\cvpub
         {\href{https://www.tacoma.uw.edu/sites/default/files/2021-08/tieanklin_nussara_senior_thesis-2021.pdf}{Weight-Based Deep Model Compression of DGA Detectors for Small Devices}} %  title
         {\textbf{Nussara Tieanklin} (Computer Science \& Systems Honors)} 
         {} % Organization
